Contract Configurator 1.15.5
- Updated agent icons from Enceos.
- Fixed issue introduced in 1.15.x with Prestige() function that incorrectly treated all contracts as Trivial.

Contract Configurator 1.15.4
- Increased base contract limits.
- Increased contract limits based on building level.
- Increased contract limits even more based on building level.
- Fixed issue where contract limits could be exceeded in the Available tab of Mission Control (thanks severedsolo).
- Fixed possible exception in HasCrew (thanks cpottinger).
- Fixed issue with "ghost" contracts showing up as offered (thanks vardicd & severedsolo).
- Fixed issue with MaxTechLevelUnlocked function (thanks hargn).
- Removed MiniAVC.

Contract Configurator 1.15.3
- New Mission Control layout. Now all contracts that are eligible are available all the time (players are no longer at the mercy of the RNG to get the contracts they want).  Also, can view the details of what contracts are *not yet* available, and what it takes to make them available.
- New contract art (special thanks to Enceos)!
- Contract generation overhaul.  Overhaul to the contract generation system for massive performance improvements.  Contracts are no longer generated in-flight (no garbage, no stutters).
- Added title and related attributes for REQUIREMENT nodes.
- Added title and related attributes for DATA nodes.
- Added sortKey for CONTRACT_TYPE and CONTRACT_GROUP nodes.
- New List.SelectUnique() method for selecting unique values (replaces selecting a random value and hoping that it hasn't been used before).
- New DATA_EXPAND node allows a CONTRACT_TYPE to be duplicated across a list of values (eg. duplicated for each Celestial Body).
- New CelestialBody.Index() method to get the global index of a body (for sorting).
- More warnings to steer contract authors towards more performant and more player-friendly ways of writing contracts.
- New ResourceConsumption parameter.