@@ -48,7 +48,21 @@ namespace ContractConfigurator
 
         protected override string RequirementText()
         {
-            string output = "Must " + (invertRequirement ? "not " : "") + "have between " + minScience.ToString("N0") + " and " + maxScience.ToString("N0") + " science";
+            string output = "Must " + (invertRequirement ? "not " : "") + "have ";
+
+            if (minScience > 0 && maxScience < float.MaxValue)
+            {
+                output += "between " + minScience.ToString("N0") + " and " + maxScience.ToString("N0");
+            }
+            else if (minScience > 0)
+            {
+                output += "at least " + minScience.ToString("N0");
+            }
+            else if (maxScience < float.MaxValue)
+            {
+                output += "at most " + maxScience.ToString("N0");
+            }
+            output += " science";
 
             return output;
         }
